OutOfMemoryError fix